<resources>
    <string name="app_name">FoodOrder</string>
    <string name="waiting_message">Vui lòng đợi ...</string>
    <string name="action_ok">OK</string>
    <string name="home">Món ăn</string>
    <string name="cart">Giỏ hàng</string>
    <string name="feedback">Phản hồi</string>
    <string name="contact">Liên hệ</string>
    <string name="order">Lịch sử</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_exit_app">Bạn có muốn thoát ứng dụng ?</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_discount">Giảm</string>
    <string name="hint_search_name">Tên món ăn ...</string>
    <string name="msg_get_date_error">Đã có lỗi xảy ra! Vui lòng thử lại ...</string>
    <string name="food_suggest">Gợi ý món ăn</string>
    <string name="action_added_cart">Đã thêm vào giỏ hàng</string>
    <string name="action_add_cart">Thêm vào giỏ hàng</string>
    <string name="label_sub">-</string>
    <string name="label_quantity_1">1</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="food_detail_title">Chi tiết món ăn</string>
    <string name="price_label">Giá :</string>
    <string name="description_label">Mô tả </string>
    <string name="more_image_label">Một số hình ảnh khác</string>
    <string name="label_add">+</string>
    <string name="delete">Xóa</string>
    <string name="confirm_delete_food">Xác nhận xóa khỏi giỏ hàng</string>
    <string name="message_delete_food">Bạn có muốn xóa món ăn này không ?</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="quantity">"Số lượng: "</string>
    <string name="list_food_order">Danh sách món ăn trong đơn hàng</string>

    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>
    <string name="message_enter_infor_order">Vui lòng điền đầy đủ thông tin giao hàng</string>

    <string name="msg_order_success">Đặt hàng thành công, vui lòng check đơn hàng trong phần Lịch sử</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_method_cash">Tiền mặt</string>
    <string name="feedback_name">Họ và tên (*)</string>
    <string name="feedback_phone">Số điện thoại</string>
    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="order_cart">Đặt hàng</string>
    <string name="total">Tổng tiền</string>
    <string name="name_require">Vui lòng nhập họ tên của bạn</string>
    <string name="comment_require">Vui lòng nhập phản hồi của bạn</string>
    <string name="send_feedback_success">"Gửi phản hồi thành công "</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_comment">Nội dung phản hồi (*)</string>
    <string name="send_feedback">Gửi phản hồi</string>
    <string name="label_id">Mã đơn hàng:</string>
    <string name="label_name">Họ tên:</string>
    <string name="label_phone">Số điện thoại:</string>
    <string name="label_address">Địa chỉ:</string>
    <string name="label_menu">Thực đơn</string>
    <string name="label_date">Ngày đặt hàng:</string>
    <string name="label_payment">Thanh toán:</string>
</resources>