<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="DialogOrderViewModel"
            type="com.example.newfoodorder.viewmodel.DialogOrderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="Autofill,LabelFor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_toStartOf="@+id/tv_price_order"
                android:text="@string/order_detail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{DialogOrderViewModel.strTotalPrice}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_foods_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{DialogOrderViewModel.getStringListFoodsOrder()}"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/payment_method"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_shape_border_gray"
            android:padding="12dp"
            android:text="@string/payment_method_cash"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feedback_name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_name_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_shape_border_gray"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:text="@={DialogOrderViewModel.strName}"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feedback_phone"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_phone_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_shape_border_gray"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:text="@={DialogOrderViewModel.strPhone}"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address_delivery"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_address_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_white_shape_border_gray"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:text="@={DialogOrderViewModel.strAddress}"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_shape_corner_6"
                android:gravity="center"
                android:padding="10dp"
                android:onClick="@{() -> DialogOrderViewModel.onClickCancel()}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/cancel"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_create_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_green_shape_corner_6"
                android:gravity="center"
                android:onClick="@{() -> DialogOrderViewModel.onClickSendOrder()}"
                android:padding="10dp"
                android:text="@string/order_cart"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>