<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="FeedbackModel"
            type="com.example.newfoodorder.model.Feedback" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_white_shape_border_red"
                android:imeOptions="actionNext"
                android:text="@={FeedbackModel.name}"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/feedback_phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_white_shape_border_red"
                android:imeOptions="actionNext"
                android:text="@={FeedbackModel.phone}"
                android:inputType="phone"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/feedback_email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_white_shape_border_red"
                android:imeOptions="actionNext"
                android:text="@={FeedbackModel.email}"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/feedback_comment"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_comment"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_white_shape_border_red"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:text="@={FeedbackModel.comment}"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_send_feedback"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_red_shape_corner_6"
                android:gravity="center"
                android:padding="12dp"
                android:onClick="@{FeedbackModel::clickSendFeedback}"
                android:text="@string/send_feedback"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</layout>
