<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="DialogCartViewModel"
            type="com.example.newfoodorder.viewmodel.DialogCartViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/layout_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/layout_image"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                app:cardCornerRadius="6dp">

                <ImageView
                    android:id="@+id/img_food_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:url_image="@{DialogCartViewModel.food.image}" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/layout_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_food_name_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{DialogCartViewModel.food.name}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_food_price_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{DialogCartViewModel.strTotalPrice}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_subtract"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_white_shape_border_gray"
                        android:gravity="center"
                        android:onClick="@{() -> DialogCartViewModel.onClickSubtractCount(tvCount)}"
                        android:text="@string/label_sub"
                        android:textColor="@color/green"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCount"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_white_shape_border_red_corner_3"
                        android:gravity="center"
                        android:text="@string/label_quantity_1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_add"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_white_shape_border_gray"
                        android:gravity="center"
                        android:onClick="@{() -> DialogCartViewModel.onClickAddCount(tvCount)}"
                        android:text="@string/label_add"
                        android:textColor="@color/green"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_infor"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_shape_corner_6"
                android:gravity="center"
                android:padding="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/cancel"
                android:onClick="@{() -> DialogCartViewModel.onClickCancel()}"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_add_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_green_shape_corner_6"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/add_to_cart"
                android:onClick="@{() -> DialogCartViewModel.onClickAddToCart()}"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>